@startuml Class Diagram

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Admin {
    - id: String
    - username: String
    - Password: String
    - nama: String
    - email: String

    + loginAdmin()
    + kelolaBarang()
    + kelolaPesanan()
    + KelolaPelanggan()
}

class Pelanggan {
    - id: String
    - nama: String
    - alamat: String
    - noTelp: String

    + loginUser()
    + lihatKatalog()
    + buatPesanan()
    + bayarPesanan()
}

class Barang {
    - idBarang: String
    - nama: String
    - harga: Double
    - stok: int

    + tambahBarang()
    + hapusBarang()
    + updateBarang()
    + lihatBarang()
}

class Pesanan {
    - idPesanan: String
    - tanggal: Date
    - totalHarga: Double
    - statusPesanan: Enum

    + buatPesanan()
    + hitungTotal()
    + updateStatus()
}

class Pembayaran {
    - idPembayaran: String
    - tanggalBayar: Date
    - metodeBayar: Enum

    + prosesBayar()
    + konfirmasiBayar()
}

Pelanggan "1" --* "1..*" Pesanan

Pesanan "1..*" *--* "1..*" Barang
Pesanan "1" --> "1" Pembayaran

Admin "1" --* "1..*" Barang
Admin "1" --* "1..*" Pelanggan
Admin "1" --* "1..*" Pesanan

@enduml